--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <img src="img/output-onlinepngtools.png" alt="currency convator" />
-    <h1>Easy Currency Convator App</h1>
+    <h1>Easy Currency Converter App</h1>
     <p>Here you can easily convert your currency</p>
 
     <div class="convator">
@@ -55,6 +55,8 @@
         </select>
         <input type="number" value="1" placeholder="0" id="input-2"/>
       </div>
+      <button id="swap-btn">Swap</button>
+
     </div>
 
     <script src="js/script.js"></script>
