improve some issue and fixd some bug

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link href="css/style.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="img/output-onlinepngtools.png" type="image/x-icon" />
   </head>
   <body>
     <img src="img/output-onlinepngtools.png" alt="currency convator" />
@@ -53,7 +54,7 @@
           <option value="EGP">EGP</option>
           <option value="EUR">EUR</option>
         </select>
-        <input type="number" value="1" placeholder="0" id="input-2"/>
+        <p id="result"></p>
       </div>
       <button id="swap-btn">Swap</button>
 
